--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,10 +25,11 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4">
+    <header class="center p-5 mb-4">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p class="lead margin-bottom">A simple calendar app for scheduling your work day</p>
+      <p id="currentDate" class="lead"></p>
+      <p id="currentTime" class="lead"></p>
     </header>
     <div class="container-fluid px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
