--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,9 +25,11 @@
   </head>
 
   <body>
-    <header class="center p-5 mb-4">
+    <header class="center p-5">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead margin-bottom">A simple calendar app for scheduling your work day</p>
+      <p class="lead margin-bottom">
+        A simple calendar app for scheduling your work day
+      </p>
       <p id="currentDate" class="lead"></p>
       <p id="currentTime" class="lead"></p>
     </header>
@@ -122,14 +124,14 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-
     </div>
-    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
 
     <script src="script.js"></script>
   </body>
